--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="baidu-site-verification" content="L6Lm9d5Crl"/>
   
   
-  
+  <meta name="baidu-site-verification" content="eirz1NnLNM" />
   
   <title>欢迎来到终极之地《。^~^。》</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
