--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <meta name="baidu-site-verification" content="eirz1NnLNM" />
   
-  <title>欢迎来到小扈的底盘！</title>
+  <title>欢迎来到小扈的地盘！</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:type" content="website">
 <meta property="og:title" content="欢迎来到终极之地《。^~^。》">
